"Remplacement du système d'ouverture de l'accordéon pour celui de intégré à Bootstrap"

--- a/style/custom.scss
+++ b/style/custom.scss
@@ -5,3 +5,8 @@ $font-family-base: 'Inter';
 $font-family-monospace: 'Roboto Mono';
 
 @import "bootstrap/bootstrap";
+
+
+.accordion-collapse{
+  transition-duration: .2s;
+}
