--- a/style/custom.css
+++ b/style/custom.css
@@ -1,4 +1,16 @@
 @charset "UTF-8";
+.start-80 {
+  left: 80% !important;
+}
+
+.start-90 {
+  left: 90% !important;
+}
+
+.start-95 {
+  left: 95% !important;
+}
+
 /*!
  * Bootstrap v5.0.2 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
