--- a/style/custom.scss
+++ b/style/custom.scss
@@ -4,6 +4,25 @@ $primary: $red;
 $font-family-base: 'Inter';
 $font-family-monospace: 'Roboto Mono';
 
+$grid-breakpoints: (
+        xs: 0,
+        sm: 576px,
+        md: 768px,
+        lg: 992px,
+        xl: 1200px,
+        xxl: 1400px
+);
+
+.start-80 {
+  left: 80% !important;
+}
+.start-90 {
+  left: 90% !important;
+}
+.start-95 {
+  left: 95% !important;
+}
+
 @import "bootstrap/bootstrap";
 
 
